[tool.poetry]
name = "dropbox"
version = "0.8"
description = "python script to download publicly shared Dropbox folders into zip files"
authors = ["Christopher Currin <chris.crisur@gmail.com>"]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
